--- a/css/global.css
+++ b/css/global.css
@@ -38,3 +38,19 @@ body {
   margin-left:auto;
   margin-right:auto;
   }
+
+.btn-default{
+    font-size:1.4em;
+    transition: all .5s;
+    border-width:2px;
+    color: #333;
+    background-color: transparent;
+    border-color: #333;
+    border-radius: 0px;
+}
+.btn-default:hover{
+    color: #eddfc4;
+    background-color: #333;
+    border-color: #333;
+    border-radius: 0px;
+}
