Fix the darn css okay...

--- a/css/global.css
+++ b/css/global.css
@@ -12,22 +12,10 @@ body {
   
   .title {
 	  font-family: game-of-thrones-bitch;
-	  	-webkit-transition:all 5s ease;
-    transition:all 5s ease;
  }
  
    .sub-title {
 	  font-family: game-of-thrones-bitch;
-	  	-webkit-transition:all 5s ease;
-    transition:all 5s ease;
- }
- 
- .grow {
-	 -webkit-transition-timing-function: ease-in-out;
-    transition-timing-function: ease-in-out;
-	-webkit-transform: scale(1.3);
-        -ms-transform: scale(1.3);
-        transform: scale(1.3);
  }
  
   .content {
@@ -53,4 +41,8 @@ body {
     background-color: #333;
     border-color: #333;
     border-radius: 0px;
+}
+
+.btn {
+    white-space: normal;
 }
